Fix for long article title wrapping in lead image regression.
Bug: T102917

--- a/www/less/leadImage.less
+++ b/www/less/leadImage.less
@@ -25,6 +25,7 @@
     padding:16px;
     width:100%;
     z-index: 4;
+    box-sizing:border-box;
 }
 
 #lead_image_none #lead_image_text_container {
